TestRepo2/src/objects/Actual_Spend__c.object
<CustomObject>
    <description>POS Project: object that represents a dollar amount spent in a given brand or program, and it is associated to a particular shopping cart</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Actual Spends</relationshipLabel>
        <relationshipName>Actual_Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cart__c</fullName>
        <label>Cart</label>
        <referenceTo>Cart__c</referenceTo>
        <relationshipLabel>Actual Spends</relationshipLabel>
        <relationshipName>Actual_Spends</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Actual Spends</relationshipLabel>
        <relationshipName>Actual_Spends</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Actual Spend</label>
    <nameField>
        <displayFormat>ACS-{00000000}</displayFormat>
        <label>Actual Spend ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actual Spends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>